<?xml version="1.0" encoding="utf-8"?>

 <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/transparent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_user"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:imeOptions="actionNext"
                    android:hint="@string/enter_name" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionDone"
                    android:hint="@string/enter_email" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:inputType="number"
                    android:maxLength="10"
                    android:imeOptions="actionNext"
                    android:hint="@string/enter_mobile_number" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:imeOptions="actionNext"
                    android:hint="@string/enter_gender" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:backgroundTint="@android:color/holo_purple"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:imeOptions="actionDone"
                    android:textStyle="bold" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>